Textify the better part of introductionGI

--- a/chap-concept.tex
+++ b/chap-concept.tex
@@ -1,6 +1,7 @@
 %!TEX root = foo-thesis.tex
 
 \chapter{Concept}
+\label{chap:concept}
 
 \section{Global Illumination Pipeline Overview}
 \label{sec:concept:overview}
@@ -131,3 +132,6 @@ Interleaved sampling \citep{Keller:2001:InterleavedSampling} is often used to va
 \section{Removing Lighting Singularities through Clamping}
 \label{sec:concept:clamping}
 It's simple, we clamp the singularities. Wouldn't be necessary with infinite number of lights. \citet{hedman2016sequential} reach high accuracy even with clamping and 2k lights.
+
+
+\todo[color=blue]{textify concept}
