--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -658,7 +658,7 @@ pages = {223--233}
 name = {Octree-Based Sparse Voxelization Using The GPU Hardware Rasterizer},
 author = {Crassin, Cyril and Green, Simon},
 note = "URL: \url{http://www.seas.upenn.edu/~pcozzi/OpenGLInsights/OpenGLInsights-SparseVoxelization.pdf} (Chapter PDF),
-\url{http://blog.icare3d.org/2012/05/gtc-2012-talk-octree-based-sparse.html} (GTC 2012 Talk), \url{http://www.gputechconf.com/gtcnew/on-demand-gtc.php?sessionTopic=&searchByKeyword=&submit=&select=+&sessionEvent=&sessionYear=&sessionFormat=#1465} (GTC 2012 Talk Video), \url{http://www.icare3d.org/research/GTC2012_Voxelization_public.pdf} (GTC 2012 Slides PDF), \url{http://www.icare3d.org/research/GTC2012_Voxelization_public.pptx} (GTC 2012 Slides PPTX), \url{http://www.openglinsights.com/} (OpenGL Insights Website)",
+\url{http://blog.icare3d.org/2012/05/gtc-2012-talk-octree-based-sparse.html} (GTC 2012 Talk), \url{http://www.gputechconf.com/gtcnew/on-demand-gtc.php?sessionTopic=&searchByKeyword=&submit=&select=+&sessionEvent=&sessionYear=&sessionFormat=\#1465} (GTC 2012 Talk Video), \url{http://www.icare3d.org/research/GTC2012_Voxelization_public.pdf} (GTC 2012 Slides PDF), \url{http://www.icare3d.org/research/GTC2012_Voxelization_public.pptx} (GTC 2012 Slides PPTX), \url{http://www.openglinsights.com/} (OpenGL Insights Website)",
 date = {2012-07-01},
 booktitle = {OpenGL Insights},
 publisher = {CRC Press, Patrick Cozzi and Christophe Riccio},
@@ -1005,4 +1005,40 @@ doi = {10.1080/2151237X.2011.621761},
 URL = {http://www.tandfonline.com/doi/abs/10.1080/2151237X.2011.621761},
 eprint = {http://www.tandfonline.com/doi/pdf/10.1080/2151237X.2011.621761},
 abstract = { Abstract In this article we describe and investigate tiled shading. The tiled techniques, though simple, enable substantial improvements to both deferred and forward shading. Tiled Shading has been previously discussed only in terms of deferred shading (tiled deferred shading). We contribute a more detailed description of the technique, introduce tiled forward shading (a generalization of tiled deferred shading to also apply to forward shading), and a thorough performance evaluation. Tiled Forward Shading has many of the advantages of deferred shading, for example, scene management and light management are decoupled. At the same time, unlike traditional deferred and tiled deferred shading, full screen antialiasing and transparency are trivially supported. We also present a thorough comparison of the performance of tiled deferred, tiled forward, and traditional deferred shading. Our evaluation shows that tiled deferred shading has the least variable worst-case performance, and scales the best with faster GPUs. Tiled deferred shading is especially suitable when there are many light sources. Tiled forward shading is shown to be competitive for scenes with fewer lights, and is much simpler than traditional forward shading techniques. Tiled shading also enables simple transitioning between deferred and forward shading. We demonstrate how this can be used to handle transparent geometry, frequently a problem when using deferred shading. Demo source code is available online at the address provided at the end of this paper. }
+}
+
+@inproceedings{Mittring:2007:Cryengine2,
+ author = {Mittring, Martin},
+ title = {Finding Next Gen: CryEngine 2},
+ booktitle = {ACM SIGGRAPH 2007 Courses},
+ series = {SIGGRAPH '07},
+ year = {2007},
+ isbn = {978-1-4503-1823-5},
+ location = {San Diego, California},
+ pages = {97--121},
+ numpages = {25},
+ url = {http://doi.acm.org/10.1145/1281500.1281671},
+ doi = {10.1145/1281500.1281671},
+ acmid = {1281671},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@article{Kajiya:1986:RenderingEquation,
+ author = {Kajiya, James T.},
+ title = {The Rendering Equation},
+ journal = {SIGGRAPH Comput. Graph.},
+ issue_date = {Aug. 1986},
+ volume = {20},
+ number = {4},
+ month = aug,
+ year = {1986},
+ issn = {0097-8930},
+ pages = {143--150},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/15886.15902},
+ doi = {10.1145/15886.15902},
+ acmid = {15902},
+ publisher = {ACM},
+ address = {New York, NY, USA},
 }
