Textify concept:ism

--- a/chap-concept.tex
+++ b/chap-concept.tex
@@ -24,7 +24,7 @@ Our G-buffer rendering does not differ from common deferred rendering pipelines 
 \section{Virtual Point Light Sampling with Reflective Shadow Maps}
 \label{sec:concept:rsmVplSampling}
 
-VPL sampling has not been the focus of this thesis, therefore we use a rather basic approach by rendering a  simple reflective shadow map and regularly sampling it. \citet{hedman2016sequential} present a more advanced approach.
+VPL sampling has not been the focus of this thesis, therefore we use a rather basic approach by rendering a simple reflective shadow map and regularly sampling it. \citet{hedman2016sequential} present a more advanced approach.
 
 \begin{outline}
 \1 Often preferred due to the simplicity and speed because rasterization. but, first bounce only.
@@ -41,49 +41,56 @@ VPL sampling has not been the focus of this thesis, therefore we use a rather ba
 
 \end{outline}
 
+
 \section{Visibility Computation with Imperfect Shadow Maps}
 \label{sec:concept:ism}
-
 
 The original paper \citep{ritschel2008ism} converts the scene geometry to a point set in a preprocessing step and uses the points to efficiently render hundreds of shadow maps in parallel. They use splatting to render the points and fill the resulting holes in the shadowmaps with a pull-push algorithm inspired by \citep{Marroquim:2007:reconstruction}.
 
 \citet{ritschel2011ismsViewAdaptive} build on this by converting the scene to a triangle texture dynamically, and sampling the points from that texture. Instead of computing a triangle texture, \citet{barak2013temporally} use the tessellation units of recent GPUs to dynamically convert triangles into points.
 We follow this approach since it is relatively simple to implement and inherently dynamic, but have not implemented the adaptive sampling from \citet{ritschel2011ismsViewAdaptive} yet.
 \citet{ritschel2008ism} also present multi-bounce indirect illumination with their technique, which we have not implemented.
-We describe the point rendering process in the following section and subsequently detail the pull-push algorithm.
+
+In contrast to \citet{ritschel2008ism}, we have found the pull-push postprocessing to be of little benefit when using regular point splatting. Instead, we propose to render single-pixel points, which opens interesting optimization opportunities but in turn does in fact require the pull-push algorithm to reconstruct the scene surfaces.
+
+We describe the regular point splat rendering process in the following section and subsequently detail the pull-push algorithm that we use when rendering single-pixel points.
+
 
 \subsection{Point Rendering with Splatting}
-\begin{outline}
-\1 render the scene
-\1 depending on the size of the triangle, set tessellation levels
-\1 of the resulting tessellated triangles, take the center, calculate approx world size of disk
-\1 while it might be faster to just use the vertices as points, we take the center of each triangle to be more accurate, otherwise the points on the edge of the triangle will enlarge the rendered area considerably.
-\1 pick a random VPL, perform culling, render splat into the VPL's ISM. To simplify the calculations, the ISM uses a paraboloid mapping. Here another advantage of the points comes into play: Compared to triangles it is trivial to perform a paraboloid projection for points.
-\1 As an optimization, we iterate over several VPLS, and collect some that pass the culling test, and render to those. more in implementation chapter
-\1 To remove holes in the resulting shadowmap, the original paper implements a simplified variant of \citet{Marroquim:2007:reconstruction} that only uses depth information from the point rendering. We found that this approach has little benefit over simply enlarging all the point splats during rendering, therefore we did not use it when using splat rendering.
-\end{outline}
+
+To convert the scene to be rendered into points, all its triangles are first tesselated to meet a certain maximum size in order for the point conversion to not introduce extreme inaccuracies. Of the smaller tesselated triangles, the center and area are calulated and a point with matching center and area is created. While it might be more performant to create points just on the vertices of the triangles, it will at the same time be more inaccurate since this approach will enlarge the rendered area considerably over the triangle's extents.
+
+Now a random VPL is chosen per point and backface culling is performed. Likewise, points that lie behind their VPL's hemisphere are culled before splatting the point into the respective imperfect shadow map. For performance reasons, a simple paraboloid projection is used for the ISMs in lieu of conventional cubemaps. Here, another advantage of using points comes into play: Compared to triangles, it is trivial to perform a paraboloid projection on them.
+
+As an optimization, we iterate over several VPLs per point and collect those that pass the culling test and render to all of them. More on this in \cref{chap:implementation}.
+
+To remove holes in the resulting shadowmap, the original paper implements a simplified variant of \citet{Marroquim:2007:reconstruction} that only uses depth information from the point rendering. We found that this approach has little benefit over simply enlarging all the point splats during rendering, therefore we did not use it when using splat rendering.
+
+
 
 \subsection{Point Rendering with Pull-Push Postprocessing}
 
-\begin{outline}
-\1 Besides point splat rendering, we also pursued a second approach that follows the algorithm of \citet{Marroquim:2007:reconstruction} more closely with the intent to obtain higher-quality shadowmaps. More specifically points are rendered as a single pixel, albeit with additional attributes like size and normal. These are then used in a subsequent reconstruction pass to create an (ideally) hole-free shadowmap. This approach also allowed a point to be rendered into multiple shadowmaps with a moderate performance impact, more on this in the next chapter.
+As an alternative to point splat rendering, this subsection proposes a second approach that follows the algorithm of \citet{Marroquim:2007:reconstruction} more closely with the intent to obtain higher-quality shadowmaps. More specifically, the points are rendered as a single pixel, albeit with additional attributes like size and normal. These are then used in a subsequent reconstruction pass to create an (ideally) hole-free shadowmap. This approach also allows a point to be rendered into multiple shadowmaps with a moderate performance impact, more on this in the next chapter.
 
-\1 rough overview: the algorithm is a ``pyramid-method'' and uses miplevels.
-\1 a pull phase aggregates the information from four pixels of a finer level to one pixel of a coarser level.
-\1 a subsequent push phase aggregate four pixels of a coarser level to one pixel of a finer level if the pixel of the finer level contains no data or is determined to belong to an occluded surface. This way, closed surfaces are derived from single-pixel points.
+To provide a rough overview, the pull-push algorithm proposed by \citet{Marroquim:2007:reconstruction} is a ``pyramid-method'' (see \cite{Strengert:2006:Pyramid}) that uses the mipmap levels of a texture to first condense and then spread the data in the texture, in this case the sparse point set representing the scene. During the pull phase, it aggregates the information from four pixels of a finer level to one pixel of a coarser level. The subsequent push phase aggregates four pixels of a coarser level to one pixel of a finer level, but only if the pixel of the finer level contains no data or is determined to belong to an occluded surface. This way, closed surfaces are derived from single-pixel points.
 
-\1 Pull phase
-    \2 It only considers pixels that pass the following tests: First, they need to contain a valid depth at all (i.e. a point must have been rendered into this pixel) and second, the pixels depth must not be greater than the frontmost of the four considered pixels plus its depth interval. If this test fails, the point is assumed to belong to a different surface that is occluded and thus should not be used for interpolation.
-    \2 The depth interval of each point is determined by adding a constant value to the rendered depth for the points in the lowest miplevel. For interpolated points, the new depth interval spans the calculated depth of the point to the highest depth value of the depth intervals of all points used for aggregation.
-    \2 The depth and radius attributes are interpolated in between with equal weights. Since the center of the aggregated point might not match with the position of the pixel (this happens if not all four pixels are used for interpolation), a displacement vector is also calculated that describes the point's location.
-\1 Push phase
-    \2 Again only pixels that pass certain tests
-        \3 Analogous to the pull phase, points must contain a valid depth and not be occluded.
-        \3 A radius check: If the pixel's location is outside the point's extends described by the displacement vector and its radius, then the point is not considered either. This is done to limit a point's influence to its actual size.
-    \2 The pixel of the finer level might already contain data computed during the pull phase. This data is overwritten if the aggregated data has a smaller depth, i.e. if the original data is considered to be occluded. Otherwise, the original point is left as it is.
-    \2 The weights used for interpolation during the push phase are not uniform, see Figure~\ref{fig:???}.
-\1 \citet{Marroquim:2007:reconstruction} also use the point's normals to correctly limit the point's size, and \citet{Marroquim:2008:reconstruction2} propose gaussian weights based on the pixel's distance to the point's location, instead constant weights solely based on pixel locations. Both of these additions we have not implemented yet.
-\end{outline}
+\subsubsection{Pull Phase}
+The pull phase reads four pixels of a finer level, computes an aggregate representation of them and writes the result to one pixels of the next coarser level. However, it only considers pixels that pass the following tests: First, they need to contain a valid depth at all (i.\,e.\ a point must have been rendered into this pixel) and second, the point in this pixel must not be occluded. A point is considered to be occluded if it is outside  the depth interval of the frontmost of the four pixel used for interpolation.
+
+Figuratively speaking, the depth interval of a point denotes the range in which other points are considered to belong to the same surface and can be used for interpolation. For the rendered points, the depth interval is simply $[d;d+k]$ where $d$ is the points depth and $k$ an arbitrarily chosen constant. For interpolated points, the new depth interval spans the interpolated depth of the point to the highest depth value of the depth intervals of all ``parent'' points.
+
+To calculate the attributes for a new point, the depth and radius of the parent points are interpolated in between with equal weights. Since the center of the aggregated point might not match with the position of the pixel (this happens if not all four pixels are used for interpolation), a displacement vector is also calculated to accurately describe the point's location.
+
+
+\subsubsection{Push Phase}
+
+Analogous to the pull phase, the push phase reads four pixels of the coarser level, rejects pixels that don't pass certain tests, and writes one output pixel into the finer level. First, just like in the pull phase, the input pixels must contain a valid depth and not be occluded to be considered. Additionally, a radius check is performed: If the pixel's location is outside the point's extends described by the displacement vector and its radius, then the point is not considered either. This is done to limit a point's influence to its actual size.
+
+The target output location in the finer level might already contain data computed during the pull phase. This data is overwritten if the aggregated data has a smaller depth, i.e. if the original data is considered to be occluded. Otherwise, the original point is left untouched, as it is potentially more accurate than the just computed, interpolated point.
+
+Since the input and output pixel's location do not match the way they do during the pull phase, the weights used for interpolation during the push phase are not uniform, see Figure~\ref{fig:???}.
+
+ \citet{Marroquim:2007:reconstruction} also use the point's normals to correctly limit the point's size, and \citet{Marroquim:2008:reconstruction2} propose gaussian weights based on the pixel's distance to the point's location, instead constant weights solely based on pixel locations. Both of these additions we have not implemented yet.
 
 
 
