--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -1042,3 +1042,11 @@ abstract = { Abstract In this article we describe and investigate tiled shading.
  publisher = {ACM},
  address = {New York, NY, USA},
 }
+
+@inproceedings {Strengert:2006:Pyramid,
+    author = {Strengert, Magnus and Kraus, Martin and Ertl, Thomas},
+    title = {Pyramid Methods in GPU-Based Image Processing},
+    year = {2006},
+    booktitle = {Workshop on Vision, Modelling, and Visualization VMV '06},
+    pages = {169--176}
+}
